--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+@theme {
+    --color-purpleDark4: #10002b;
+    --color-purpleDark3: #240046;
+    --color-purpleDark2: #3c096c;
+    --color-purpleDark1: #5a189a;
+    --color-purpleLight1: #7b2ff7;
+    --color-purpleLight2: #9d4edd;
+    --color-purpleLight3: #c77dff;
+    --color-purpleLight4: #e0aaff;
+}
